# CodotakuUI

./: .gitmodules  CMakeLists.txt
examples/: demo.cpp
include/: codotaku_entry.hpp  codotaku_style_builder.hpp  codotaku_utils.hpp  codotaku_window_context.hpp
src/: codotaku_ui.cpp
